--- a/main.html
+++ b/main.html
@@ -29,6 +29,7 @@
 				<td>32</td>
 			</tr>
 			<tr>
+				<td>chest</td>
 				<td>34</td>
 				
 				<td>34</td>
@@ -40,7 +41,7 @@
 				<td>41</td>
 			</tr>
 			<tr>
-			
+			        <td>sleeve</td>
 					<td>23</td>
 					<td>24</td>
 					<td>24</td>
